--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -17,7 +17,7 @@
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
-        <li><a href="account">login/my account</a></li>
+        <li><a href="account.html">login/my account</a></li>
       </ul>
     </header>
 
