fixing index.html links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h1>Make it Good</h1>
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="recipeCatalog.html">recipe catalog</a></li>
-        <li><a href="uploadRecipe.html">upload recipe</a></li>
+        <li><a href="/pages/recipeCatalog.html">recipe catalog</a></li>
+        <li><a href="/pages/uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
-        <li><a href="account.html">login/my account</a></li>
+        <li><a href="/pages/account.html">login/my account</a></li>
       </ul>
     </header>
 
@@ -40,7 +40,7 @@
     <div>
       <h2>Most recent recipes</h2>
       <div id="recipeCard">
-        <a href="recipePage.html">
+        <a href="/pages/recipePage.html">
           <!-- filler image -->
           <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
           <h4>Recipe title</h4>
@@ -48,7 +48,7 @@
         </a>
       </div>
       <div id="recipeCard">
-        <a href="recipePage.html">
+        <a href="/pages/recipePage.html">
           <!-- filler image -->
           <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
           <h4>Recipe title</h4>
@@ -56,7 +56,7 @@
         </a>
       </div>
       <div id="recipeCard">
-        <a href="recipePage.html">
+        <a href="/pages/recipePage.html">
           <!-- filler image -->
           <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
           <h4>Recipe title</h4>
@@ -64,7 +64,7 @@
         </a>
       </div>
       <div id="recipeCard">
-        <a href="recipePage.html">
+        <a href="/pages/recipePage.html">
           <!-- filler image -->
           <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
           <h4>Recipe title</h4>
