--- a/pages/account.html
+++ b/pages/account.html
@@ -13,7 +13,7 @@
       <img src="/assets/startupLogo.svg" alt="make it good logo" />
       <h1>Make it Good</h1>
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="../index.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
         <li><a href="uploadRecipe.html">upload recipe</a></li>
         <!-- if logged in, shows 'my account' -->
