--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make it Good</title>
     <link rel="icon" type="image/x-icon" href="/assets/startupLogo.svg" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="globalStyles.css" />
+    <!-- <link rel="stylesheet" href="index.css" /> -->
   </head>
   <body>
     <!-- home page -->
     <!-- navbar -->
     <header>
       <!-- logo is a maybe - still haven't figured out color scheme -->
-      <img src="/assets/startupLogo.svg" alt="make it good logo" />
-      <h1>Make it Good</h1>
+      <div id="logo-container">
+        <img id="logo" src="/assets/startupLogo.svg" alt="make it good logo" />
+        <h1 id="make-it-good">Make it Good</h1>
+      </div>
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="/pages/recipeCatalog.html">recipe catalog</a></li>
@@ -23,62 +33,93 @@
     </header>
 
     <!-- when login is pressed (user not logged in) this modal shows -->
-    <div>
+    <div id="login">
       <h1>Log in</h1>
       <!-- not super sure how to handle if they have signed in or not -->
-      <a>or Sign Up</a>
-      <form>
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username" required />
-        <label for="password">Password: </label>
-        <input type="text" name="password" id="password" required />
-        <button type="submit">Log in/Sign up</button>
+      <form id="login-form" class="d-flex flex-column">
+        <label for="username" class="form-label">Username: </label>
+        <input type="text" name="username" id="username" class="form-control" required />
+        <label for="password" class="form-label">Password: </label>
+        <input type="text" name="password" id="password" class="form-control" required />
+
+        <button type="submit" class="btn pt-2">Log in/Sign up</button>
       </form>
     </div>
 
     <!-- most recent recipes -->
-    <div>
-      <h2>Most recent recipes</h2>
-      <div id="recipeCard">
-        <a href="/pages/recipePage.html">
-          <!-- filler image -->
-          <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-          <h4>Recipe title</h4>
-          <p>recipe description</p>
-        </a>
+    <div id="index-body my-10">
+      <div class="container text-center">
+      <div class="row g-0">
+        <div class="container text-start col-9 ">
+          <div id="recipe-holder">
+          <h2 class="py-4">Most recent recipes</h2>
+          <div id="recent-recipes" class="row justify-content-start">
+            <div id="recipeCard" class="col">
+              <a href="/pages/recipePage.html">
+                <!-- filler image -->
+                <img
+                  src="/assets/foodbaby.jpg"
+                  alt="filler for image card"
+                  width="300"
+                />
+                <h4>Recipe title</h4>
+                <p>recipe description</p>
+              </a>
+            </div>
+            <div id="recipeCard" class="col">
+              <a href="/pages/recipePage.html">
+                <!-- filler image -->
+                <img
+                  src="/assets/foodbaby.jpg"
+                  alt="filler for image card"
+                  width="300"
+                />
+                <h4>Recipe title</h4>
+                <p>recipe description</p>
+              </a>
+            </div>
+          </div>
+          <div id="recent-recipes" class="row justify-content-start">
+            <div id="recipeCard" class="col">
+              <a href="/pages/recipePage.html">
+                <!-- filler image -->
+                <img
+                  src="/assets/foodbaby.jpg"
+                  alt="filler for image card"
+                  width="300"
+                />
+                <h4>Recipe title</h4>
+                <p>recipe description</p>
+              </a>
+            </div>
+            <div id="recipeCard" class="col">
+              <a href="/pages/recipePage.html">
+                <!-- filler image -->
+                <img
+                  src="/assets/foodbaby.jpg"
+                  alt="filler for image card"
+                  width="300"
+                />
+                <h4>Recipe title</h4>
+                <p>recipe description</p>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="recipeCard">
-        <a href="/pages/recipePage.html">
-          <!-- filler image -->
-          <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-          <h4>Recipe title</h4>
-          <p>recipe description</p>
-        </a>
-      </div>
-      <div id="recipeCard">
-        <a href="/pages/recipePage.html">
-          <!-- filler image -->
-          <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-          <h4>Recipe title</h4>
-          <p>recipe description</p>
-        </a>
-      </div>
-      <div id="recipeCard">
-        <a href="/pages/recipePage.html">
-          <!-- filler image -->
-          <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-          <h4>Recipe title</h4>
-          <p>recipe description</p>
-        </a>
+
+      <!-- about us -->
+      <div id="about" class="col-3">
+        <h4 class="py-4">About us</h4>
+        <!-- will replace img with family pic -->
+        <img src="/assets/baking-kid.jpg" alt="placeholder img" width="300" />
+        <p>
+          We love being in the kitchen and we want to share our recipes with
+          you! These website is a collection of recipes we've found and liked.
+          Enjoy!
+        </p>
       </div>
     </div>
-
-    <!-- about us -->
-    <div>
-      <h4>About us</h4>
-      <!-- will replace img with family pic -->
-      <img src="/assets/baking-kid.jpg" alt="placeholder img" width="300"/>
-      <p>We love being in the kitchen and we want to share our recipes with you! These website is a collection of recipes we've found and liked. Enjoy! </p>
     </div>
 
     <!-- footer -->
@@ -88,8 +129,19 @@
         target="_blank"
         >My github repository</a
       >
-      <img src="/assets/heart-circle.svg" alt="heart icon" width="50"/>
-
+      <div id="heart-container">
+        <img
+          id="float-heart"
+          src="/assets/heart-circle.svg"
+          alt="heart icon"
+          width="65"
+        />
+      </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
