--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make it Good</title>
     <link rel="icon" type="image/x-icon" href="/assets/startupLogo.svg" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../globalStyles.css"/>
   </head>
   <body>
     <!-- navbar -->
     <header>
       <!-- logo is a maybe - still haven't figured out color scheme -->
-      <img src="/assets/startupLogo.svg" alt="make it good logo" />
-      <h1>Make it Good</h1>
+      <div id="logo-container">
+        <img id="logo" src="/assets/startupLogo.svg" alt="make it good logo" />
+        <h1 id="make-it-good">Make it Good</h1>
+      </div>
       <ul>
         <li><a href="../index.html">home</a></li>
         <li><a href="recipeCatalog.html">recipe catalog</a></li>
@@ -22,16 +26,16 @@
     </header>
 
     <!-- when login is pressed (user not logged in) this modal shows -->
-    <div>
+    <div id="login">
       <h1>Log in</h1>
       <!-- not super sure how to handle if they have signed in or not -->
-      <a>or Sign Up</a>
-      <form>
-        <label for="username">Username: </label>
-        <input type="text" name="username" id="username" required />
-        <label for="password">Password: </label>
-        <input type="text" name="password" id="password" required />
-        <button type="submit">Log in/Sign up</button>
+      <form id="login-form" class="d-flex flex-column">
+        <label for="username" class="form-label">Username: </label>
+        <input type="text" name="username" id="username" class="form-control" required />
+        <label for="password" class="form-label">Password: </label>
+        <input type="text" name="password" id="password" class="form-control" required />
+
+        <button type="submit" class="btn pt-2">Log in/Sign up</button>
       </form>
     </div>
 
@@ -125,5 +129,7 @@
       >
       <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
     </footer>
+
   </body>
+
 </html>
