--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make it Good</title>
     <link rel="icon" type="image/x-icon" href="/assets/startupLogo.svg" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../globalStyles.css"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../globalStyles.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -31,9 +36,21 @@
       <!-- not super sure how to handle if they have signed in or not -->
       <form id="login-form" class="d-flex flex-column">
         <label for="username" class="form-label">Username: </label>
-        <input type="text" name="username" id="username" class="form-control" required />
+        <input
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          required
+        />
         <label for="password" class="form-label">Password: </label>
-        <input type="text" name="password" id="password" class="form-control" required />
+        <input
+          type="text"
+          name="password"
+          id="password"
+          class="form-control"
+          required
+        />
 
         <button type="submit" class="btn pt-2">Log in/Sign up</button>
       </form>
@@ -41,82 +58,72 @@
 
     <!-- select upload method -->
     <!-- I might only do 1 or 2 methods if there's no time to implement pdf -->
-    <div>
-      <h1>Select upload method:</h1>
-      <ul>
-        <li>pdf</li>
-        <li>website url</li>
-        <!-- default - manual = type it in yourself -->
-        <li>manual</li>
-      </ul>
+    <div
+      class="d-flex flex-column justify-content-center align-items-center pt-lg-4"
+    >
+      <h2>Select upload method:</h2>
+      <p>url</p>
+      <p>manual</p>
     </div>
 
     <!-- the page will show different views based on which upload method is selected -->
-    <!-- pdf view - only accepts pdf file type -->
-    <div>
-      <h2>File Upload</h2>
-      <label for="file-upload">Choose a file to upload</label>
-      <input
-        type="file"
-        id="file-upload"
-        name="file-upload"
-        accept="application/pdf"
-      />
-      <!-- show preview here -->
-      <label for="recipe-notes">Write down any notes you have here:</label>
-      <input type="text" id="recipe-notes" name="recipe-notes" />
-      <button>Upload</button>
-    </div>
 
     <!-- website url view -->
-    <div>
+    <div class="d-flex flex-column justify-content-center align-items-center">
       <h2>Upload with Website URL</h2>
       <p>
         Provide a URL to the recipe on the website, and it will be displayed as
         an available recipe here.
       </p>
-      <label for="url-upload">URL:</label>
-      <input type="url" name="url-upload" id="url-upload" />
-      <!-- show iframe preview here - example iframe for reference -->
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/2oUxr7149DY?si=bDVszX_TNA-5MBJH"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-      <label for="recipe-notes">Write down any notes you have here:</label>
-      <input type="text" id="recipe-notes" name="recipe-notes" />
-      <button>Upload Recipe</button>
+      <div class="d-flex flex-column gap-3">
+        <label for="url-upload">URL:</label>
+        <input type="url" name="url-upload" id="url-upload" />
+        <!-- show iframe preview here - example iframe for reference, will be quite large -->
+
+        <iframe
+          width="1120"
+          height="630"
+          src="https://www.youtube.com/embed/2oUxr7149DY?si=bDVszX_TNA-5MBJH"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+
+        <label for="recipe-notes">Write down any notes you have here:</label>
+        <input type="text" id="recipe-notes" name="recipe-notes" />
+        <button class="btn">Upload Recipe</button>
+      </div>
     </div>
 
     <!-- manual recipe upload -->
-    <div>
-      <h2>Manual Recipe Upload</h2>
-      <h3>Upload Picture(s)</h3>
-      <form>
-        <label for="recipe-pic-upload">Choose a file to upload</label>
+    <div class="px-lg-5 pb-lg-5">
+      <div class="d-flex flex-column align-items-center">
+        <h2>Manual Recipe Upload</h2>
+      </div>
+      <form class="d-flex flex-column justify-content-center">
+        <label for="recipe-pic-upload">Choose a picture to upload</label>
         <input
           type="file"
           id="recipe-pic-upload"
           name="recipe-pic-upload"
-          accept="application/pdf"
+          accept="application/jpg"
         />
-        <label for="recipe-title">Recipe title:</label>
-        <input type="text" name="recipe-title" id="recipe-title" />
-        <label for="recipe-servings">Servings:</label>
-        <input type="number" name="recipe-servings" id="recipe-servings"/>
-        <label for="recipe-time">Time to make:</label>
-        <input type="number" name="recipe-time" id="recipe-time" />
+        <div class="d-flex flex-row align-items-center justify-content-center">
+          <label for="recipe-title" class="px-2">Recipe title:</label>
+          <input type="text" name="recipe-title" id="recipe-title" />
+          <label for="recipe-servings" class="px-2">Servings:</label>
+          <input type="number" name="recipe-servings" id="recipe-servings" />
+          <label for="recipe-time" class="px-2">Time to make:</label>
+          <input type="number" name="recipe-time" id="recipe-time" />
+        </div>
         <label for="ingredients">Ingredients:</label>
         <!-- automatically show new text boxes if one has been typed in  -->
-        <input type="text" name="ingredients" id="ingredients" />
+        <textarea name="ingredients" id="ingredients" rows="5" cols="33">Write ingredients here - use enter after each ingredient</textarea>
         <label for="instructions">Directions:</label>
-        <input type="text" name="instructions" id="instructions"/>
+        <textarea name="instructions" id="instructions" rows="5" cols="33">Write recipe steps here</textarea>
         <!-- if not signed in pressing upload button will prompt sign in - Author will be this person. -->
-        <button>Upload</button>
+        <button class="btn p-2">Upload</button>
       </form>
     </div>
 
@@ -129,7 +136,5 @@
       >
       <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
     </footer>
-
   </body>
-
 </html>
