--- a/pages/recipeCatalog.html
+++ b/pages/recipeCatalog.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make it Good</title>
     <link rel="icon" type="image/x-icon" href="/assets/startupLogo.svg" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../globalStyles.css"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../globalStyles.css" />
   </head>
   <body>
     <!-- recipe catalog page -->
@@ -32,84 +37,125 @@
       <!-- not super sure how to handle if they have signed in or not -->
       <form id="login-form" class="d-flex flex-column">
         <label for="username" class="form-label">Username: </label>
-        <input type="text" name="username" id="username" class="form-control" required />
+        <input
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          required
+        />
         <label for="password" class="form-label">Password: </label>
-        <input type="text" name="password" id="password" class="form-control" required />
+        <input
+          type="text"
+          name="password"
+          id="password"
+          class="form-control"
+          required
+        />
 
         <button type="submit" class="btn pt-2">Log in/Sign up</button>
       </form>
     </div>
 
     <!-- recipe sorting options -->
-    <div>
+    <div class="px-lg-5">
       <h1>Recipe catalog</h1>
       <!-- tentative sort options -->
-      <div>
-        <label for="search-select">Sort by:</label>
-        <select name="search-select" id="search-select">
-          <option value="most recent">Most recent</option>
-          <option value="meal">Meals</option>
-          <option value="dessert">Desserts</option>
-          <option value="side">Side dishes</option>
-          <option value="favorited">Favorited recipes</option>
-        </select>
-      </div>
-      <!-- search box - search by title (maybe add search by tags if time) -->
-      <div>
-        <form>
-          <label for="searchbox">Search By:</label>
-          <input type="text" name="searchbox" id="searchbox" />
-        </form>
+      <div class="d-flex flex-row justify-content-start">
+        <div>
+          <label for="search-select" class="px-2">Sort by:</label>
+          <select name="search-select" id="search-select" class="me-5">
+            <option value="most recent">Most recent</option>
+            <option value="meal">Meals</option>
+            <option value="dessert">Desserts</option>
+            <option value="side">Side dishes</option>
+            <option value="favorited">Favorited recipes</option>
+          </select>
+        </div>
+        <!-- search box - search by title (maybe add search by tags if time) -->
+        <div>
+          <form>
+            <label for="searchbox" class="px-2">Search By:</label>
+            <input type="text" name="searchbox" id="searchbox" />
+          </form>
+        </div>
       </div>
 
       <!-- recipes - maybe 12-16 per page, but I only put 4 here - sorted by most recent default -->
-      <div>
-        <div id="recipeCard">
+      <div class="container text-center py-4">
+        <div class="row">
+          <div id="recipeCard" class="col text-start">
             <a href="recipePage.html">
               <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
+              <img
+                src="/assets/foodbaby.jpg"
+                alt="filler for image card"
+                width="200"
+              />
               <h4>Recipe title</h4>
               <p>recipe description</p>
             </a>
           </div>
-          <div id="recipeCard">
+          <div id="recipeCard" class="col text-start">
             <a href="recipePage.html">
               <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
+              <img
+                src="/assets/foodbaby.jpg"
+                alt="filler for image card"
+                width="200"
+              />
               <h4>Recipe title</h4>
               <p>recipe description</p>
             </a>
           </div>
-          <div id="recipeCard">
+          <div id="recipeCard" class="col text-start">
             <a href="recipePage.html">
               <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
+              <img
+                src="/assets/foodbaby.jpg"
+                alt="filler for image card"
+                width="200"
+              />
               <h4>Recipe title</h4>
               <p>recipe description</p>
             </a>
           </div>
-          <div id="recipeCard">
+          <div id="recipeCard" class="col text-start">
             <a href="recipePage.html">
               <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
+              <img
+                src="/assets/foodbaby.jpg"
+                alt="filler for image card"
+                width="200"
+              />
               <h4>Recipe title</h4>
               <p>recipe description</p>
             </a>
           </div>
+          <div id="recipeCard" class="col text-start">
+            <a href="recipePage.html">
+              <!-- filler image -->
+              <img
+                src="/assets/foodbaby.jpg"
+                alt="filler for image card"
+                width="200"
+              />
+              <h4>Recipe title</h4>
+              <p>recipe description</p>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- footer -->
     <footer>
-        <a
-          href="https://github.com/abbie-barton/startup-cs260.git"
-          target="_blank"
-          >My github repository</a
-        >
-        <img src="/assets/heart-circle.svg" alt="heart icon" width="50"/>
-  
-      </footer>
-
+      <a
+        href="https://github.com/abbie-barton/startup-cs260.git"
+        target="_blank"
+        >My github repository</a
+      >
+      <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
+    </footer>
   </body>
-
 </html>
