--- a/pages/account.html
+++ b/pages/account.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Make it Good</title>
     <link rel="icon" type="image/x-icon" href="/assets/startupLogo.svg" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../globalStyles.css"/>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="../globalStyles.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -32,72 +37,156 @@
       <!-- not super sure how to handle if they have signed in or not -->
       <form id="login-form" class="d-flex flex-column">
         <label for="username" class="form-label">Username: </label>
-        <input type="text" name="username" id="username" class="form-control" required />
+        <input
+          type="text"
+          name="username"
+          id="username"
+          class="form-control"
+          required
+        />
         <label for="password" class="form-label">Password: </label>
-        <input type="text" name="password" id="password" class="form-control" required />
+        <input
+          type="text"
+          name="password"
+          id="password"
+          class="form-control"
+          required
+        />
 
         <button type="submit" class="btn pt-2">Log in/Sign up</button>
       </form>
     </div>
 
     <!-- account information -->
-    <div>
-        <!-- account image - can change but this is the default -->
-        <img src="/assets/cooker.svg" alt="default profile picture" width="200">
-        <h3>Best Cook in the World</h3>
-        <p>expert chef</p>
-        <!-- on button press, can update picture, name, or tag/description -->
-        <button>Edit</button>
-        <label for="update-picture">Upload profile pic</label>
-        <input type="file" name="update-picture" id="update-picture" accept="application/pdf">
-        <label for="update-title">Edit title</label>
-        <input type="text" name="update-title" id="update-title"/>
-        <label for="update-name">Edit name</label>
-        <input type="text" name="update-name" id="update-name"/>
-    </div>
+    <div class="container text-start py-4">
+      <div class="row">
+        <div class="col">
+          <div class="text-center">
+            <!-- account image - can change but this is the default -->
+            <div class="text-center">
+              <img
+                src="/assets/cooker.svg"
+                alt="default profile picture"
+                width="200"
+              />
+            </div>
+            <h3 class="text-center">Best Cook in the World</h3>
+            <p class="text-center">expert chef</p>
+            <!-- on button press, can update picture, name, or tag/description -->
+            <label for="update-picture">change profile picture: </label>
+            <input
+              type="file"
+              name="update-picture"
+              id="update-picture"
+              accept="application/pdf"
+            />
+            <div class="py-2">
+              <label for="update-title">Edit title</label>
+              <input type="text" name="update-title" id="update-title" />
+              <label for="update-name">Edit name</label>
+              <input type="text" name="update-name" id="update-name" />
+            </div>
+            <button type="submit" class="btn">confirm</button>
+          </div>
 
-    <!-- contributed recipes -->
-    <div>
-        <h2>Contributed Recipes</h2>
-        <!-- however many recipes author has contributed. if none then shows: upload recipes to view contributions -->
-        <div id="recipeCard">
-            <a href="recipePage.html">
-              <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-              <h4>Recipe title</h4>
-              <p>recipe description</p>
-            </a>
+          <!-- contributed recipes -->
+          <div>
+            <h2 class="py-2">Contributed Recipes</h2>
+            <!-- however many recipes author has contributed. if none then shows: upload recipes to view contributions -->
+            <div class="container text-start">
+              <div class="row">
+                <div id="recipeCard" class="col">
+                  <a href="recipePage.html">
+                    <!-- filler image -->
+                    <img
+                      src="/assets/foodbaby.jpg"
+                      alt="filler for image card"
+                      width="200"
+                    />
+                    <h4>Recipe title</h4>
+                    <p>recipe description</p>
+                  </a>
+                </div>
+                <div id="recipeCard" class="col">
+                  <a href="recipePage.html">
+                    <!-- filler image -->
+                    <img
+                      src="/assets/foodbaby.jpg"
+                      alt="filler for image card"
+                      width="200"
+                    />
+                    <h4>Recipe title</h4>
+                    <p>recipe description</p>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
-          <div id="recipeCard">
-            <a href="recipePage.html">
-              <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-              <h4>Recipe title</h4>
-              <p>recipe description</p>
-            </a>
-          </div>
-    </div>
+        </div>
 
-    <!-- favorited recipes -->
-    <div>
-        <h2>My favorited recipes</h2>
-        <p>click on the heart icon on a recipe page to favorite the recipe and come back to it later!</p>
-        <div id="recipeCard">
-            <a href="recipePage.html">
-              <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-              <h4>Recipe title</h4>
-              <p>recipe description</p>
-            </a>
+        <!-- favorited recipes -->
+        <div class="col bg-light p-4 rounded">
+          <h2>My favorited recipes</h2>
+          <p>
+            click the heart icon on a recipe page to favorite a recipe and come
+            back to it later!
+          </p>
+          <div class="container text-start">
+            <div class="row">
+              <div id="recipeCard" class="col text-start">
+                <a href="recipePage.html">
+                  <!-- filler image -->
+                  <img
+                    src="/assets/foodbaby.jpg"
+                    alt="filler for image card"
+                    width="200"
+                  />
+                  <h4>Recipe title</h4>
+                  <p>recipe description</p>
+                </a>
+              </div>
+              <div id="recipeCard" class="col text-start">
+                <a href="recipePage.html">
+                  <!-- filler image -->
+                  <img
+                    src="/assets/foodbaby.jpg"
+                    alt="filler for image card"
+                    width="200"
+                  />
+                  <h4>Recipe title</h4>
+                  <p>recipe description</p>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div id="recipeCard" class="col text-start">
+                <a href="recipePage.html">
+                  <!-- filler image -->
+                  <img
+                    src="/assets/foodbaby.jpg"
+                    alt="filler for image card"
+                    width="200"
+                  />
+                  <h4>Recipe title</h4>
+                  <p>recipe description</p>
+                </a>
+              </div>
+              <div id="recipeCard" class="col text-start">
+                <a href="recipePage.html">
+                  <!-- filler image -->
+                  <img
+                    src="/assets/foodbaby.jpg"
+                    alt="filler for image card"
+                    width="200"
+                  />
+                  <h4>Recipe title</h4>
+                  <p>recipe description</p>
+                </a>
+              </div>
+            </div>
           </div>
-          <div id="recipeCard">
-            <a href="recipePage.html">
-              <!-- filler image -->
-              <img src="/assets/foodbaby.jpg" alt="filler for image card" width="200"/>
-              <h4>Recipe title</h4>
-              <p>recipe description</p>
-            </a>
-          </div>
+        </div>
+      </div>
     </div>
 
     <!-- footer -->
@@ -109,7 +198,5 @@
       >
       <img src="/assets/heart-circle.svg" alt="heart icon" width="50" />
     </footer>
-
   </body>
-
 </html>
