--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -81,8 +81,8 @@
         <!-- show iframe preview here - example iframe for reference, will be quite large -->
 
         <iframe
-          width="1120"
-          height="630"
+          width="560"
+          height="315"
           src="https://www.youtube.com/embed/2oUxr7149DY?si=bDVszX_TNA-5MBJH"
           title="YouTube video player"
           frameborder="0"
@@ -119,9 +119,13 @@
         </div>
         <label for="ingredients">Ingredients:</label>
         <!-- automatically show new text boxes if one has been typed in  -->
-        <textarea name="ingredients" id="ingredients" rows="5" cols="33">Write ingredients here - use enter after each ingredient</textarea>
+        <textarea name="ingredients" id="ingredients" rows="5" cols="33">
+Write ingredients here - use enter after each ingredient</textarea
+        >
         <label for="instructions">Directions:</label>
-        <textarea name="instructions" id="instructions" rows="5" cols="33">Write recipe steps here</textarea>
+        <textarea name="instructions" id="instructions" rows="5" cols="33">
+Write recipe steps here</textarea
+        >
         <!-- if not signed in pressing upload button will prompt sign in - Author will be this person. -->
         <button class="btn p-2">Upload</button>
       </form>
