--- a/pages/uploadRecipe.html
+++ b/pages/uploadRecipe.html
@@ -13,7 +13,8 @@
     />
     <link rel="stylesheet" href="../globalStyles.css" />
 
-    <script src="login.js"></script>
+    <script src="../login.js"></script>
+    <script src="../uploadRecipe.js"></script>
   </head>
   <body>
     <!-- navbar -->
@@ -38,24 +39,22 @@
         <h1>Log in</h1>
         <!-- not super sure how to handle if they have signed in or not -->
         <form id="login-form" class="d-flex flex-column">
-          <label for="username" class="form-label" id="username"
+          <label for="usernameInput" class="form-label" id="username"
             >Username:
           </label>
           <input
             type="text"
-            name="username"
-            id="username"
+            id="usernameInput"
             class="form-control"
             required
             autocomplete="on"
           />
-          <label for="password" class="form-label" id="password"
+          <label for="passwordInput" class="form-label" id="password"
             >Password:
           </label>
           <input
             type="text"
-            name="password"
-            id="password"
+            id="passwordInput"
             class="form-control"
             required
             autocomplete="on"
@@ -74,11 +73,11 @@
     </div>
 
     <!-- manual recipe upload -->
-    <div class="px-lg-5 pb-lg-5">
+    <div class="px-lg-5 pb-lg-5" id="form-holder">
       <div class="d-flex flex-column align-items-center">
         <h2>Manual Recipe Upload</h2>
       </div>
-      <form class="d-flex flex-column justify-content-center">
+      <form id="recipeForm" class="d-flex flex-column justify-content-center">
         <label for="recipe-pic-upload">Choose a picture to upload</label>
         <input
           type="file"
@@ -88,23 +87,23 @@
         />
         <div class="d-flex flex-row align-items-center justify-content-center">
           <label for="recipe-title" class="px-2">Recipe title:</label>
-          <input type="text" name="recipe-title" id="recipe-title" />
+          <input type="text" name="recipe-title" id="recipe-title" required>
           <label for="recipe-servings" class="px-2">Servings:</label>
-          <input type="number" name="recipe-servings" id="recipe-servings" />
+          <input type="number" name="recipe-servings" id="recipe-servings" required/>
           <label for="recipe-time" class="px-2">Time to make:</label>
-          <input type="number" name="recipe-time" id="recipe-time" />
+          <input type="number" name="recipe-time" id="recipe-time" required/>
         </div>
         <label for="ingredients">Ingredients:</label>
         <!-- automatically show new text boxes if one has been typed in  -->
-        <textarea name="ingredients" id="ingredients" rows="5" cols="33">
-Write ingredients here - use enter after each ingredient</textarea
+        <textarea name="ingredients" id="ingredients" rows="5" cols="33" required onclick="handleTextBox(true)">
+Write ingredients here - press enter after each ingredient</textarea
         >
         <label for="instructions">Directions:</label>
-        <textarea name="instructions" id="instructions" rows="5" cols="33">
+        <textarea name="instructions" id="instructions" rows="5" cols="33" required onclick="handleTextBox(false)">
 Write recipe steps here</textarea
         >
         <!-- if not signed in pressing upload button will prompt sign in - Author will be this person. -->
-        <button class="btn p-2">Upload</button>
+        <button class="btn p-2 pb-4" onclick="saveRecipe()">Upload</button>
       </form>
     </div>
 
